first couple steps

--- a/DreamSpace_Documentation/DreamSpaceDocumentation.html
+++ b/DreamSpace_Documentation/DreamSpaceDocumentation.html
@@ -11,25 +11,25 @@
 </head>
 <body>
     <header>
-        <h1>Documentation: <br> Archeology of the Future</h1>
+        <h1>Documentation: <br> Dream Space: Documentation</h1>
     </header>
     <main>
         <div class="row">
             <p>
-                For this project, I made a head jewelry that could do body modification and change human genome to mix with animal microrganisms. 
+                My idea for ideal dream place exists somehwere mountains and water meet, there's plenty of green. Yet it's not a strict nature only environment. It stores all your memory and lost objects from the past. Here, the physics and gravity work different than it is on the place. Everything you missed and lost will be forever stored here, and nothing will be lost or damaged again.
+                First, we build the terrain, and changed the skybox: 
             </p>
-            <img src="Worldview.png">
-            
-
+            <img src="TerrainMade.png">
         </div>
 
         <div class="row">
             <p>
-                I drew a sketch and started modeling in Blender. After some research, it turns out I might need to get into sculpting.
+                Then to add water, i realized I have to switch my file from Core to URP. Thus I redid that and added water. Along with other 3D objects, the space is pretty much done.
             </p>
-            <img src="modelstart.png">
-            <img src="sculpting.png">
+            <img src="WaterAdd.png">
         </div>
+
+        <img src="3DModeladd.png">
 
         <div class="row">
             <p>
@@ -39,11 +39,7 @@
         </div>
 
         <h1>FINAL Render</h1>
-        <div class="row">
-            
-            <img src="SimJewel_Final.png">
-            <img src="SimJewel_Final_2.png">
-        </div>
+            <iframe width="1400" height="750" style="margin-left:auto; margin-right:auto;" src="https://www.youtube.com/embed/pSPzQrWeS2Q?si=VRQ5Mpo8vlkszBRa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     </main>
 </body>
