--- a/DreamSpace_Documentation/DreamSpaceDocumentation.html
+++ b/DreamSpace_Documentation/DreamSpaceDocumentation.html
@@ -28,14 +28,23 @@
             </p>
             <img src="WaterAdd.png">
         </div>
-
-        <img src="3DModeladd.png">
+        <div class="row">
+            <P>      </P>
+            <img src="3DModeladd.png">
+        </div>
+        
 
         <div class="row">
             <p>
-                After that, I start to think about the surroundings. As this head piece is for chosen new born SimChild, it should be in a hospital setting. Tablet displaying the baby's information should also be included.
+                I then go on to design the entry page, however, it won't lead me to my scene. I eventually ended up debugging with Chat GPT and found out for some reason, I didn't have an Event System. Nor did I build my scenes.
             </p>
-            <img src="Otherelement.png">
+            <img src="BuildSettingNotFound.png">
+        </div>
+        <div class="row">
+            <p>
+                After fixing that, once we're in, we now need to make the 3D models interactive, by making them into prefabs, and add rigidbody and capsule collider. Once all thaT is done, I added the ray casting script to my main camera. 
+            </p>
+            <img src="RigidBodyCapsuleAdded.png">
         </div>
 
         <h1>FINAL Render</h1>
