--- a/Made for Play/MadeforPlay.html
+++ b/Made for Play/MadeforPlay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="DreamSpaceDocumentation.css" rel="stylesheet">
+    <link href="MadeforPlay.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Playfair+Display&display=swap" rel="stylesheet">
@@ -11,22 +11,21 @@
 </head>
 <body>
     <header>
-        <h1>Documentation: <br> Made to Play: Documentation</h1>
+        <h1>Documentation: <br> Made for Play: Documentation</h1>
     </header>
     <main>
         <div class="row">
             <p>
-                My idea for ideal dream place exists somehwere mountains and water meet, there's plenty of green. Yet it's not a strict nature only environment. It stores all your memory and lost objects from the past. Here, the physics and gravity work different than it is on the place. Everything you missed and lost will be forever stored here, and nothing will be lost or damaged again.
-                First, we build the terrain, and changed the skybox: 
+                I set out to design a Pacman-esque game that feature a bird and hedge maze. To start, I drew all the assets in Illustrator.
             </p>
-            <img src="TerrainMade.png">
+            <img src="Visual_ai.png">
         </div>
 
         <div class="row">
             <p>
-                Then to add water, i realized I have to switch my file from Core to URP. Thus I redid that and added water. Along with other 3D objects, the space is pretty much done.
+                Then to move all the assets into Unity as 2D sprites, and add RigidBody 2D & box colliders (or other shapes depends on the scenario).
             </p>
-            <img src="WaterAdd.png">
+            <img src="UnityBuilt.png">
         </div>
         <div class="row">
             <P>      </P>
