--- a/Made for Play/MadeforPlay.html
+++ b/Made for Play/MadeforPlay.html
@@ -54,9 +54,17 @@
         </div>
         <div class="row">
             <p>
-                After fixing that,  once we're in, we now need to make the 3D models interactive, by making them into prefabs, and add rigidbody and capsule collider. Once all thaT is done, I added the ray casting script to my main camera. 
+                I referred to our in-class demo to write the scripts for reward, furthermore changed it to have a reward system.
             </p>
-            <img src="RigidBodyCapsuleAdded.png">
+            <img src="Reward1.png">
+            <img src="reward2.png">
+        </div>
+
+        <div class="row">
+            <p>
+                Last but not the least, since I forgot to check the do not move box for the maze wall, things start to fly around once I clicked play. I had to fix that.
+            </p>
+            <img src="FixWall.png">
         </div>
 
         <h1>FINAL Render</h1>
