--- a/Made for Play/MadeforPlay.html
+++ b/Made for Play/MadeforPlay.html
@@ -62,7 +62,7 @@
 
         <div class="row">
             <p>
-                Last but not the least, since I forgot to check the do not move box for the maze wall, things start to fly around once I clicked play. I had to fix that.
+                Last but not the least, since I forgot to check the do not move box for the maze wall, things start to fly around once I clicked play. I had to fix that. Once that's finished, we're almost done.
             </p>
             <img src="FixWall.png">
         </div>
