--- a/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
+++ b/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
@@ -7,11 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Playfair+Display&display=swap" rel="stylesheet">
-    <title>Documentation: Archeology of the Future</title>
+    <title>Documentation: Digital Materiality</title>
 </head>
 <body>
     <header>
-        <h1>Documentation: <br> Archeology of the Future</h1>
+        <h1>Documentation: <br>Digital Materiality</h1>
     </header>
     <main>
         <div class="row">
