first project summary

--- a/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
+++ b/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
@@ -16,34 +16,59 @@
     <main>
         <div class="row">
             <p>
-                For this project, I made a head jewelry that could do body modification and change human genome to mix with animal microrganisms. 
+                For this project, I made two different compositions and played with different perimeters in each, to see how those inputs change the generated images.
             </p>
-            <img src="Worldview.png">
-            
+        </div>
 
+        <div class="row">
+            <h1>Comp 1</h1>
+            <img src="proj1_codeoverview.png">
         </div>
 
         <div class="row">
             <p>
-                I drew a sketch and started modeling in Blender. After some research, it turns out I might need to get into sculpting.
+                For the first one, I started with a tube, then to have it twisted twice on different axis to give it an interesting look. I then put the shape throught sopto and chopto operators to define our noise map.
             </p>
-            <img src="modelstart.png">
-            <img src="sculpting.png">
         </div>
-
+        <div class="row">
+            <img src="proj1_process1.png">
+        </div>
         <div class="row">
             <p>
-                After that, I start to think about the surroundings. As this head piece is for chosen new born SimChild, it should be in a hospital setting. Tablet displaying the baby's information should also be included.
+                Then, I drew a box and transform it into small scale for our partical usage, then to draw a geometry operator which has the data from the pos we drew before feed in. So now we have this interesting partical shapes based on our 3D shape. Then we set up the camera to tweak and refine how we want our composition to look like. Additionally, I introduce the audio file in and took the maximum and minimum and have them run through math, then to feed into noise to determine how the particles move (based on the audio).
             </p>
-            <img src="Otherelement.png">
+        </div>
+        <div class="row">
+            <img src="proj1_process2.png">
+            <img src="proj1_process3.png">
+        </div>
+        <div class="row">
+            <p>
+                Now, we have some interesting shape. To further make it more intersting, I started to have it mirrored multiple times.
+            </p>
+        </div>
+        <div class="row">
+            <img src="proj_var1.gif">
+            <img src="proj_var2.gif">
+        </div>
+        <div class="row">
+            <img src="proj_var3.gif">
+            <img src="proj_var4.gif">
+        </div>
+        <div class="row">
+            <p>
+                Additionally, I tweaked some camera settings on the x translate and rotation. And have two more different shapes and results rendered.
+            </p>
+        </div>
+        <div class="row">
+            <img src="proj_var5.gif">
+            <img src="proj_var6.gif">
+        </div>
+        <div class="row">
+            <h1>Comp 2</h1>
+            <img src="proj2_codeoverview.png">
         </div>
 
-        <h1>FINAL Render</h1>
-        <div class="row">
-            
-            <img src="SimJewel_Final.png">
-            <img src="SimJewel_Final_2.png">
-        </div>
 
     </main>
 </body>
