--- a/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
+++ b/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
@@ -84,8 +84,49 @@
             </p>
             <img src="proj2_var2.gif">
         </div>
-
-
+        <div class="row">
+            <img src="proj2_process3.png">
+        </div>
+        <div class="row">
+            <p>
+                However, due to not having commercial license, I cannot have more complicated square spawning image. So I started with a box sop and have it go through geometry and feedbacks.
+            </p>
+            <img src="proj2_var3.gif">
+        </div>
+        <div class="row">
+            <p>
+                To make it visually more appealing, I made the boxes inverted. 
+            </p>
+            <img src="proj2_var4.gif">
+        </div>
+        <div class="row">
+            <p>
+                After that, I added another hsv adjustment at the end before the outcome. 
+            </p>
+            <img src="proj2_var5.gif">
+        </div>
+        <div class="row">
+            <img src="proj2_process4.png">
+            <p>
+                I'm still not satisfied, so I played with some more settings to refine the displacement to have results below:
+            </p>
+        </div>
+        <div class="row">
+            <img src="proj2_var6.gif">
+            <img src="proj2_var7.gif">
+        </div>
+        <div class="row">
+            <img src="proj2_var8.gif">
+        </div>
+        <div class="row">
+            <img src="proj2_process5.png">
+        </div>
+        <div class="row">
+            <p>
+                Making another geometry to connect lines and boxes. We don't have the commercial licenses so the render we got is limited. But this is how it looks like:
+            </p>
+            <img src="proj2_var9.gif">
+        </div>
     </main>
 </body>
 </html>
