--- a/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
+++ b/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
@@ -65,6 +65,25 @@
             <img src="proj_var6.gif">
         </div>
         <div class="row">
+            <img src="proj1_process_changecameradistance.png">
+            <p>
+                To change shapes, I have the kick value feed into the noise transform, then we get something like this. The movement is too sharp to my liking, so I aim to fix it somehow.
+            </p>
+            <img src="proj_var7.gif">
+        </div>
+        <div class="row">
+            <img src="proj_var8.gif">
+            <p>
+                I then feed the same math into the color of constant. To get somethin like this.
+            </p>
+        </div>
+        <div class="row">
+            <p>
+                I'm still not satisfied with the movement of the image, so I put audio analysis and selected the kick, and have it feed into the camera's rotate Rx. This time the zoom zoom transition is much smoother and dramatic.
+            </p>
+            <img src="proj_var9.gif">
+        </div>
+        <div class="row">
             <h1>Comp 2</h1>
             <img src="proj2_codeoverview.png">
         </div>
