--- a/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
+++ b/Documentation/touchDesigner_Digital Materiality/DigitalMaterialityDocumentation.html
@@ -65,7 +65,9 @@
             <img src="proj_var6.gif">
         </div>
         <div class="row">
-            <img src="proj1_process_changecameradistance.png">
+            <img src="proj1_process_kickchangedistance.png">
+        </div>
+        <div class="row">
             <p>
                 To change shapes, I have the kick value feed into the noise transform, then we get something like this. The movement is too sharp to my liking, so I aim to fix it somehow.
             </p>
@@ -78,11 +80,25 @@
             </p>
         </div>
         <div class="row">
+            <img src="proj1_process_changecameradistance.png">
             <p>
                 I'm still not satisfied with the movement of the image, so I put audio analysis and selected the kick, and have it feed into the camera's rotate Rx. This time the zoom zoom transition is much smoother and dramatic.
             </p>
-            <img src="proj_var9.gif">
         </div>
+        <div class="row">
+            <img src="proj_var9.gif">
+            <img src="proj_var10.gif">
+        </div>
+        <div class="row">
+            <img src="proj1_process_gradientloop.png">
+            <p>
+                I'm still not satisfied with the movement of the image, so I put audio analysis and selected the kick, and have it feed into the camera's rotate Rx. This time the zoom zoom transition is much smoother and dramatic.
+            </p>
+        </div>
+        <div class="row">
+            <img src="proj_var11.gif">
+        </div>
+
         <div class="row">
             <h1>Comp 2</h1>
             <img src="proj2_codeoverview.png">
@@ -144,7 +160,6 @@
             <p>
                 Making another geometry to connect lines and boxes. We don't have the commercial licenses so the render we got is limited. But this is how it looks like:
             </p>
-            <p>push again</p>
             <img src="proj2_var9.gif">
         </div>
     </main>
